# dev-fastapi-celery-example

./: README.md  pyproject.toml
application/: main.py  worker.py
application/static/: main.css  main.js
application/templates/: _base.html  home.html
